[Overlay] Prevent backdrop from covering scrollbars

--- a/packages/core/src/components/overlay/_overlay.scss
+++ b/packages/core/src/components/overlay/_overlay.scss
@@ -69,9 +69,12 @@ body.#{$ns}-overlay-open {
   }
 }
 
-// fixed position so the backdrop forecefully covers the whole screen
+// sticky position on the backdrop because we want the behavior of
+// fixed positioning but percentage dimensions to be relative to the
+// inner content box of the parent (so the backdrop doesn't cover
+// the parent's scrollbars)
 .#{$ns}-overlay-backdrop {
-  @include position-all(fixed, 0);
+  @include position-all(sticky, 0);
   @include react-transition(
     "#{$ns}-overlay",
     (opacity: 0 1),
@@ -82,6 +85,8 @@ body.#{$ns}-overlay-open {
   background-color: $overlay-background-color;
   overflow: auto;
   user-select: none;
+  width: 100%;
+  height: 100%;
 
   &:focus {
     outline: none;
